gap fix

--- a/Style.css
+++ b/Style.css
@@ -387,7 +387,7 @@ h2 {
         justify-content: center;
         position: static;
         left: auto;
-        gap: 10px;
+        gap: 15px;
         height: 30px;
         width: 110px;
     }
